2003-11-10  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Made errors visible even when quiet.

	* src/cmd_pipe.py: Made quietness the default in rubber-pipe.

	* Makefile.in: Made the man pages a dependency for install.

	* src/cmdline.py, src/cmd_info.py, src/cmd_pipe.py: Modified the help
	messages so they conform to GNU conventions.

2003-11-01  Emmanuel Beffara  <manu@beffara.org>

	* man/...: Added documentation for "rubber-pipe".

	* rubber-pipe.in, src/cmd_pipe.py: Added the "rubber-pipe"
	command-line frontend.

	* src/__init__.py, src/modules/dvips.py, src/modules/pdftex.py: Added
	a field "final_file" in the "Environment" class.

2003-10-30  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/beamer.py, man/...: Added a module for package 'beamer'.

	* src/__init__.py: Modified the heuristics for pdfTeX's fake errors.

2003-10-29  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/util.py: Added support for multi-line macro
	arguments.

	* src/modules/graphics.py: Added a hook for \DeclareGraphicsExtension
	and preliminary support for \DeclareGraphicsRule.

	* src/graphics/mpost.py: Fixed the regular expression for dependency
	analysis in MetaPost sources.

2003-10-27  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/{verbatim|moreverb}.py, man/...: Added modules for
	packages 'verbatim' and 'moreverb' (providing dependency analysis).

2003-10-20  Emmanuel Beffara  <manu@beffara.org>

	* src/...: Added a reference to the message writer in dependency
	nodes. Used it to make cleaning more verbose.

	* src/__init__.py (Environment): Added method "prog_available" to
	check for external programs.

	* src/graphics/__init__.py, src/graphics/convert.py: Added graphics
	module 'convert' for ImageMagick conversion.

	* src/util.py, src/graphics/__init__.py: Changed the Converter class
	to allow several modules for a given rewriting rule.

2003-10-07  Emmanuel Beffara  <manu@beffara.org>
